samples/OK/predef_funcs_chr.php
<?php
declare(strict_types=1);
$a = chr(1);