samples/SEMANTIC_ERROR/division_by_zero1.php
<?php
declare(strict_types=1);
$b = 8;
$b = 0;
//ERROR[8]
$a = 1 / $b;